# Lexis

./: .gitignore  README.md  render.yaml
.dev/: context.md
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  cache.py  config.py  main.py  sse.py
backend/app/auth/: jwt.py  middleware.py  ownership.py  rate_limiter.py  utils.py
backend/app/core/: caching.py  circuit_breaker.py  net.py  network.py  security.py
backend/app/db/: base.py  create_indexes.py  migrate_onboarding.py  session.py
backend/app/documents/: summarizer.py  validation.py
backend/app/expiry/: service.py
backend/app/middleware/: compression.py
backend/app/models/: chat.py  citation.py  document.py  invoice.py  message.py  notification.py  project.py  user.py  workspace.py
backend/app/rag/: pipeline.py  providers.py  web_search.py
backend/app/routers/: auth.py  chats.py  documents.py  notifications.py  projects.py  public.py  users.py  workspaces.py
backend/app/schemas/: chat.py  document.py  error.py  notification.py  project.py  user.py  workspace.py
backend/app/storage/: r2_client.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_excerpt_text.py  003_chat_summary_and_naming.py
backend/tests/unit/: test_auth_router.py  test_auth_service.py  test_authorization.py  test_batch_operations.py  test_chat_management.py  test_circuit_breaker.py  test_citations.py  test_compression.py  test_document_validation.py  test_documents_router.py  test_expiry.py  test_notifications.py  test_pipeline.py  test_projects.py  test_provider_selection.py  test_rag_pipeline.py  test_rate_limiter.py  test_storage.py  test_unified_query.py
(+35 files in other folders)
