[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexis-backend"
version = "0.1.0"
description = "Lexis SaaS RAG Application Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "boto3",
    "llama-index",
    "google-generativeai",
    "groq",
    "apscheduler",
    "pydantic",
    "pydantic-settings",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "httpx",
    "pytest-asyncio",
    "respx",
    "factory-boy"
]
