[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexis-backend"
version = "0.1.0"
description = "Lexis SaaS RAG Application Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "boto3",
    "llama-index",
    "google-generativeai",
    "google-genai",
    "groq",
    "apscheduler",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "alembic",
    "email-validator",
    "pypdf",
    "llama-index-readers-file",
    "tavily-python>=0.7.26",
    "redis>=8.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "httpx",
    "pytest-asyncio",
    "respx",
    "factory-boy"
]
